--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/index.725e94f9.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>TodoList</title>
-    <script async="" src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -15,7 +19,7 @@
     <main>
       <section class="list__input">
         <form action="" method="get" class="form">
-          <input type="text" class="todo" placeholder="to do things" required="">
+          <input type="text" class="todo" placeholder="to do things" required />
           <button class="btn__submit btn">submit</button>
         </form>
       </section>
@@ -40,6 +44,6 @@
       </section>
     </main>
 
-    <script src="/index.53864b1c.js"></script>
-  <script src="/prac.26b353a0.js"></script></body>
+    <script src="index.js"></script>
+  </body>
 </html>
